--- a/views/meus-dados.ejs
+++ b/views/meus-dados.ejs
@@ -39,60 +39,153 @@
                     <div class="div-info-usuario-principal">
                         <p class="titulo-meus-dados">
                             <span class="material-icons">article</span> MEUS DADOS
-                        </p>
+                        </p>                        
 
-                        <% if(cadastroOk) { %>
-
-                            <p  class="infoAtualizacaoSucesso">
-                                Olá <strong><%= meusDados.nome + " " + meusDados.sobrenome %></strong> seus dados foram atualizados com sucesso.
+                        <% if(locals.dadosAtualizados) { %> 
+                            <p  class="msgStatusSucesso">
+                                Seus dados foram atualizados com <b>sucesso</b>.
                                 
-                            </p> 
-        
-                        <% } %>
+                            </p>
+                            <br>
+                            <br> 
+                        <% } %>                      
 
                         <form action="/usuario/meus-dados?_method=PUT" method="POST" class="form-meus-dados">
-
-
-
-
                             <div class="div-nome-completo">
                                 <div class="div-nome">
                                     <label for="nome">Nome</label>
-                                    <input id="nome" name="nome" value="<%= meusDados.nome %>" type="text" placeholder="Digite seu nome" >
+
+                                    <% if(locals.meusDados) {%>
+                                        <input id="nome" name="nome" value="<%= locals.meusDados && meusDados.nome %>" type="text" placeholder="Digite seu nome" >
+                                    <% } %> 
+
+                                    <% if(locals.dadosPreenchido) {%>
+                                        <input id="nome" name="nome" value="<%= locals.dadosPreenchido && dadosPreenchido.nome %>" type="text" placeholder="Digite seu nome" >
+                                    <% } %>                                   
+                                    
+                                    <% if(locals.errorsFormCadastro && errorsFormCadastro.nome) { %>
+                                        <p class="msg-erro-form-cadastro"> 
+                                            <b><%= errorsFormCadastro.nome.param + ":  " %></b>  <%= errorsFormCadastro.nome.msg %>
+                                        </p>                                        
+                                    <% } %> 
+
                                 </div>
                                 <div class="div-sobrenome">
                                     <label for="sobrenome">Sobrenome</label>
-                                    <input id="sobrenome" name="sobrenome" value="<%= meusDados.sobrenome %>" type="text" placeholder="Digite seu sobrenome" >
+
+                                    <% if(locals.meusDados) {%>
+                                        <input id="sobrenome" name="sobrenome" value="<%= locals.meusDados && meusDados.sobrenome %>" type="text" placeholder="Digite seu sobrenome" >
+                                    <% } %> 
+
+                                    <% if(locals.dadosPreenchido) {%>
+                                        <input id="sobrenome" name="sobrenome" value="<%= locals.dadosPreenchido && dadosPreenchido.sobrenome %>" type="text" placeholder="Digite seu sobrenome" >
+                                    <% } %>
+                                    
+                                    <% if(locals.errorsFormCadastro && errorsFormCadastro.sobrenome) { %>
+                                        <p class="msg-erro-form-cadastro"> 
+                                            <b><%= errorsFormCadastro.sobrenome.param + ":  " %></b>  <%= errorsFormCadastro.sobrenome.msg %>
+                                        </p>                                        
+                                    <% } %>
+                                
                                 </div>                                
                             </div>
                             <div class="div-cpf-rg-data-nasc">
                                 <div class="div-cpf">
                                     <label for="cpf">CPF</label>
-                                    <input id="cpf" name="cpf" value="<%= meusDados.cpf %>" type="text" placeholder="Digite apenas números" >
+
+                                    <% if(locals.meusDados) {%>
+                                        <input id="cpf" name="cpf" value="<%= locals.meusDados && meusDados.cpf %>" type="text" placeholder="Digite apenas números" >
+                                    <% } %> 
+
+                                    <% if(locals.dadosPreenchido) {%>
+                                        <input id="cpf" name="cpf" value="<%= locals.dadosPreenchido && dadosPreenchido.cpf %>" type="text" placeholder="Digite apenas números" >
+                                    <% } %>
+                                
+                                    <% if(locals.errorsFormCadastro && errorsFormCadastro.cpf) { %>
+                                        <p class="msg-erro-form-cadastro"> 
+                                            <b><%= errorsFormCadastro.cpf.param + ":  " %></b>  <%= errorsFormCadastro.cpf.msg %>
+                                        </p>                                        
+                                    <% } %>
+                                
                                 </div>
                                 <div class="div-rg">
                                     <label for="rg">RG</label>
-                                    <input id="rg" name="rg" value="<%= meusDados.rg %>"  type="text" placeholder="Digite apenas números" >
+
+                                    <% if(locals.meusDados) {%>
+                                        <input id="rg" name="rg" value="<%= locals.meusDados && meusDados.rg %>"  type="text" placeholder="Digite apenas números" >
+                                    <% } %> 
+
+                                    <% if(locals.dadosPreenchido) {%>
+                                        <input id="rg" name="rg" value="<%= locals.dadosPreenchido && dadosPreenchido.rg %>"  type="text" placeholder="Digite apenas números" >
+                                    <% } %>
+                                
+                                    <% if(locals.errorsFormCadastro && errorsFormCadastro.rg) { %>
+                                        <p class="msg-erro-form-cadastro"> 
+                                            <b><%= errorsFormCadastro.rg.param + ":  " %></b>  <%= errorsFormCadastro.rg.msg %>
+                                        </p>                                        
+                                    <% } %>
+                                
                                 </div>
                                 <div class="div-data-nasc">
                                     <label for="data-nasc">Data de Nascimento</label>
-                                    <input id="data-nasc" name="data_nasc" value="<%= meusDados.data_nascimento %>" type="date" >
+
+                                    <% if(locals.meusDados) {%>
+                                        <input id="data-nasc" name="data_nasc" value="<%= locals.meusDados && meusDados.data_nascimento %>" type="date" >
+                                    <% } %> 
+
+                                    <% if(locals.dadosPreenchido) {%>
+                                        <input id="data-nasc" name="data_nasc" value="<%= locals.dadosPreenchido && dadosPreenchido.data_nasc %>" type="date" >
+                                    <% } %>                                    
+                                
+                                    <% if(locals.errorsFormCadastro && errorsFormCadastro.data_nasc) { %>
+                                        <p class="msg-erro-form-cadastro"> 
+                                            <b><%= errorsFormCadastro.data_nasc.param + ":  " %></b>  <%= errorsFormCadastro.data_nasc.msg %>
+                                        </p>                                        
+                                    <% } %>
+                                
                                 </div>
                             </div>
                             <div class="div-email-tel">
                                 <div class="div-email">
                                     <label for="email">E-Mail</label>
-                                    <input id="email" name="email" type="email" value="<%= meusDados.email %>" disabled >
+
+                                    <% if(locals.meusDados) {%>
+                                        <input id="email" name="email" type="email" value="<%= locals.meusDados && meusDados.email %>" Readonly>
+                                    <% } %> 
+
+                                    <% if(locals.dadosPreenchido) {%>
+                                        <input id="email" name="email" type="email" value="<%= locals.dadosPreenchido && dadosPreenchido.email %>" Readonly>
+                                    <% } %> 
+                                    
+                                    <% if(locals.errorsFormCadastro && errorsFormCadastro.email) { %>
+                                        <p class="msg-erro-form-cadastro"> 
+                                            <b><%= errorsFormCadastro.email.param + ":  " %></b>  <%= errorsFormCadastro.email.msg %>
+                                        </p>                                        
+                                    <% } %>
                                 </div>
                                 <div class="div-tel">
                                     <label for="tel">Telefone</label>
-                                    <input id="tel" name="tel" type="text" value="<%= meusDados.telefone %>" placeholder="(11) 98651-9872" >
+
+                                    <% if(locals.meusDados) {%>
+                                        <input id="tel" name="tel" type="text" value="<%= locals.meusDados && meusDados.telefone %>" placeholder="(11) 98651-9872" >
+                                    <% } %> 
+
+                                    <% if(locals.dadosPreenchido) {%>
+                                        <input id="tel" name="tel" type="text" value="<%= locals.dadosPreenchido && dadosPreenchido.tel %>" placeholder="(11) 98651-9872" >
+                                    <% } %>
+
+                                    <% if(locals.errorsFormCadastro && errorsFormCadastro.tel) { %>
+                                        <p class="msg-erro-form-cadastro"> 
+                                            <b><%= errorsFormCadastro.tel.param + ":  " %></b>  <%= errorsFormCadastro.tel.msg %>
+                                        </p>                                        
+                                    <% } %>
+                                
                                 </div>
                             </div>
-                            <div class="div-autoriza-promocoes">
+                            <!--div class="div-autoriza-promocoes">
                                 <input id="autoriza-promocoes" name="autoriza-promocoes" type="checkbox" >
                                 <label for="autoriza-promocoes">Autorizo o recebimento de e-mails sobre promoções</label>                                
-                            </div>
+                            </div-->
                             <div class="div-btn-atualiza-cadastro">
                                 <button type="submit">ATUALIZAR CADASTRO</button>                                
                             </div>                             
