--- a/views/checkout-pagamento.ejs
+++ b/views/checkout-pagamento.ejs
@@ -72,44 +72,17 @@
                     <div class="div-botoes-continuar-voltar">
                         <a href="/checkout/checkout-endereco" class="btn-voltar-progresso">
                             <span class="material-icons-outlined">keyboard_backspace</span>
-                            VOLTAR AO CARRINHO
+                            VOLTAR AO ENDEREÇO
                         </a>
                         <a href="/checkout/checkout-confirmacao-pedido" class="btn-continuar-progresso">
-                            IR PARA O PAGAMENTO
+                            IR PARA REVISÃO
                             <span class="material-icons-outlined">east</span>
                         </a>
                     </div>            
                 </div>
-    
-                <div class="div-checkout-resuso-preco">
-                    <div class="div-titulo-resumo">
-                        <h2>Resumo</h2>
-                    </div>
+                
+                <%- include('./partials/resumo-valores-carrinho') %>
 
-                    <div class="div-subtotal">
-                        <p>Subtotal</p>
-                        <p>R$500,00</p>
-                    </div>
-
-                    <div class="div-disconto">
-                        <p>Desconto</p>
-                        <p>R$25,00</p>
-                    </div>
-
-                    <div class="div-transportadora-escolhida">
-                        <p>TopSales6 7 dias úteis</p>
-                        <p>R$0,00</p>
-                    </div>
-                    
-                    <div class="div-total-para-pagar">
-                        <p>Total</p>
-                        <p>R$525,00</p>
-                    </div>
-
-                    <div class="div-total-a-vista-pagar">
-                        <p>à vista no Boleto - R$525,00</p>                        
-                    </div>
-                </div>
             </main>
         </div>
     </div>
