--- a/public/stylesheets/cards.css
+++ b/public/stylesheets/cards.css
@@ -63,7 +63,11 @@
 .div-cards-principal .div-cards .card .div-card-img-infos .card-infos .card-preco-anterior {
     font-size: 0.75rem;    
     color: #333;
-    margin-bottom: 4px;
+    margin-bottom: 4px;    
+}
+.div-cards-principal .div-cards .card .div-card-img-infos .card-infos .card-preco-anterior span{ 
+    font-size: 0.75rem;   
+    text-decoration: line-through;
 }
 
 .div-cards-principal .div-cards .card .div-card-img-infos .card-infos .card-preco-atual {
