--- a/public/stylesheets/checkout.css
+++ b/public/stylesheets/checkout.css
@@ -126,6 +126,27 @@
     font-size: 1.25rem;
 }
 
+.btn-finalizar-pedido {    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 15px;
+    background: #00a202;
+    border-radius: 7px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1rem;
+    margin-top: 10px;
+    transition: 0.3s;
+}
+.btn-finalizar-pedido:hover{
+    background-color: #018302;
+}
+.btn-finalizar-pedido span {
+    margin-left: 10px;
+}
 
 /**************************************************************/
 
