--- a/public/stylesheets/cards.css
+++ b/public/stylesheets/cards.css
@@ -9,7 +9,7 @@
 .div-cards-principal .div-cards {
     display: flex;
     flex-direction: row;    
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     flex-wrap: wrap;
     margin-bottom: 0px;           
 }
@@ -22,7 +22,7 @@
 }
 
 .div-cards-principal .div-cards .card {        
-    margin-bottom: 40px;
+    margin: 0 12.3px 40px 12.3px;
     width: 100%;
     padding: 20px;
     border-radius: 7px;
@@ -125,7 +125,7 @@
 
 @media (min-width: 600px) {
     .div-cards-principal .div-cards .card {                    
-        width: 46%;      
+        width: 45%;      
     }
 
     .div-cards-principal .div-cards .div-card-img-infos {
@@ -148,7 +148,7 @@
     }
     
     .div-cards-principal .div-cards .card {           
-        width: 47%;      
+        width: 46%;      
     }
 }
 
@@ -171,7 +171,14 @@
 
 @media (min-width: 1280px) { 
     .div-cards-principal .div-cards .card {           
+        width: 22%;      
+    }
+}
+
+@media (min-width: 1300px) { 
+    .div-cards-principal .div-cards .card {           
         width: 23%;      
     }
 }
+
 
